fix-transition-flicker

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -54,5 +54,5 @@ a:hover {
 }
 
 .soundcloud {
-	margin-bottom: : 100px ;
+	margin-bottom: 100px;
 }
